Fixed the menu fade in effect optimisation with overflow = hidden

--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -69,6 +69,6 @@
 /***** Menu check *****/
 .menu__card:hover {
     & .check {
-        width: 65px;
+        width: 85px;
     }
 }
