--- a/sass/_restaurants.scss
+++ b/sass/_restaurants.scss
@@ -36,24 +36,23 @@
 
     & .menu__card {
         @include card;
-        padding: 15px;
-        padding-right: 0;
+        padding: 15px 0 15px 15px;
         box-shadow: 0px 4.01px 15.04px 0px #0000001A;
+        overflow: hidden;
 
         & .check {
             background-color: $tag-bg-color;
-            border: none;
-            margin: -15px 0;
+            margin: -1rem 0;
             border-radius: 0 15px 15px 0;
             width: 0;
-            overflow: hidden;
-            padding: initial;
             transition: width 0.25s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
         
             &__icon {
                 color: $second-text-color;
-                font-size: 20px;
-                padding: 0 15px;
             }
         }
 
@@ -67,18 +66,16 @@
 
         & .menu__description{
             @include flex__column;
-            gap: 5px
+            gap: 5px;
         }
 
         & .meal_name {
             font-weight: 500;
-            text-overflow: ellipsis;
         }
 
         & .meal_subname {
             font-size: 15px;
             font-weight: 300;
-            text-overflow: ellipsis;
         }
 
         & .prices {
