--- a/sass/main.css
+++ b/sass/main.css
@@ -412,24 +412,23 @@ footer img {
   display: flex;
   border-radius: 15px;
   background-color: #FFFFFF;
-  padding: 15px;
-  padding-right: 0;
+  padding: 15px 0 15px 15px;
   box-shadow: 0px 4.01px 15.04px 0px rgba(0, 0, 0, 0.1019607843);
+  overflow: hidden;
 }
 .menu .menu__card .check {
   background-color: #99E2D0;
-  border: none;
-  margin: -15px 0;
+  margin: -1rem 0;
   border-radius: 0 15px 15px 0;
   width: 0;
-  overflow: hidden;
-  padding: initial;
   transition: width 0.25s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
 .menu .menu__card .check__icon {
   color: #FFFFFF;
-  font-size: 20px;
-  padding: 0 15px;
 }
 .menu .menu__card .menu__content {
   display: flex;
@@ -445,12 +444,10 @@ footer img {
 }
 .menu .menu__card .meal_name {
   font-weight: 500;
-  text-overflow: ellipsis;
 }
 .menu .menu__card .meal_subname {
   font-size: 15px;
   font-weight: 300;
-  text-overflow: ellipsis;
 }
 .menu .menu__card .prices {
   font-size: 15px;
@@ -553,5 +550,5 @@ footer img {
 
 /***** Menu check *****/
 .menu__card:hover .check {
-  width: 65px;
+  width: 85px;
 }/*# sourceMappingURL=main.css.map */
